gitops/apps/testapp/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testapp-svc
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
