gitops/apps/testapp/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
  - host: demoapp-base.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: testapp-svc
            port:
              number: 8080
  tls:
  - hosts:
    - demoapp-base.example.com
    secretName: demoapp-tls-cert
